<resources>

    <!--titles-->
    <string name="app_name">EMA App</string>
    <string name="platform_android">Android</string>
    <string name="skills_headline">Skills</string>
    <string name="home_works">Homework</string>
    <string name="push">push</string>
    <string name="review">review</string>
    <string name="acceptance">acceptance</string>

    <!--switch to night/day mode-->
    <string name="night_mode">Night mode</string>

    <!--image descriptions-->
    <string name="hw_number">Home work number</string>
    <string name="email">Email</string>
    <string name="slack">Slack</string>
    <string name="linked_in">LinkedIn</string>
    <string name="kotlin">Kotlin</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="swift">Swift</string>
    <string name="user_icon">User icon</string>
    <string name="check_mark">Check_mark</string>
    <string name="clock">Clock</string>
    <string name="error_image">Error</string>
    <string name="login_icon">Login icon</string>

    <!--progress titles-->
    <string name="unknown_progress">—/—</string>
    <string name="zero">0/10</string>
    <string name="one">1/10</string>
    <string name="two">2/10</string>
    <string name="three">3/10</string>
    <string name="four">4/10</string>
    <string name="five">5/10</string>
    <string name="six">6/10</string>
    <string name="seven">7/10</string>
    <string name="eight">8/10</string>
    <string name="nine">9/10</string>
    <string name="ten">10/10</string>

    <!-- toolbar titles -->
    <string name="user_filter_all">All</string>
    <string name="user_filter_android" translatable="false">Android</string>
    <string name="user_filter_iOS" translatable="false">iOS</string>
    <string name="user_list_title">List of students</string>
    <string name="user_profile_title">User profile</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Students List</string>
    <string name="second_fragment_label">User Profile</string>
    <string name="edit_fragment_label"> Edit Profile</string>
    <string name="error_fragment_label">Error</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- User filter -->
    <string name="android_student" translatable="false">androidStudent</string>
    <string name="ios_student" translatable="false">iosStudent</string>

    <!-- Errors -->
    <string name="error_title">Oops, something went wrong!</string>
    <string name="error_connection">Please check your internet connection and try again.</string>
    <string name="error_button">Retry</string>
    <string name="error_email"> User does not have an email address.</string>
    <string name="error_linked_in"> User does not have a LinkedIn profile.</string>
    <string name="error_slack"> User does not have a Slack profile. </string>
    <string name="activity_not_found">"We did not find any suitable application on your device to open this link. "</string>

    <!-- Hints -->
    <string name="hint_password">PASSWORD</string>
    <string name="hint_username">USERNAME</string>

    <!-- Buttons -->
    <string name="login_button">LOGIN</string>

    <!-- Other -->
    <string name="email_client">"Choose email client:"</string>
    <string name="base_url" translatable="false">http://emarest.cz.mass-php-1.mit.etn.cz/api/</string>
    <string name="mobile_academy_2021" translatable="false">Mobile Academy 2021</string>

    <!-- Login -->
    <string name="login_success">You were successfully logged in.</string>
    <string name="wrong_credentials">Please enter a valid username and password.</string>
    <string name="etnetera_logo">Etnetera logo</string>

    <!-- Edit profile -->
    <string name="edit">Edit</string>
    <string name="submit">Save</string>
    <string name="edit_skills">Edit skills</string>
    <string name="android_skill">Android skill</string>
    <string name="kotlin_skill">Kotlin skill</string>
    <string name="ios_skill">iOS skill</string>
    <string name="swift_skill">Swift skill</string>
    <string name="no_rights_edit">You have no rights to edit this profile.</string>
    <string name="edit_skills_subtitle">You can edit your skills here.</string>
    <string name="skills_change_success">Skills were successfully changed.</string>
    <string name="arrow">arrow</string>
    <string name="homework_progress">Homework progress</string>
</resources>