<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_all"
        style="@style/ToggleButtonWithIconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/user_filter_all" />

    <Button
        android:id="@+id/button_android"
        style="@style/ToggleButtonWithIconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/user_filter_android" />

    <Button
        android:id="@+id/button_iOs"
        style="@style/ToggleButtonWithIconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/user_filter_iOS" />

</androidx.appcompat.widget.LinearLayoutCompat>