<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_700"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_all"
            style="@style/ToggleButtonWithIconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="153dp"
            android:text="@string/user_filter_all"/>

        <Button
            android:id="@+id/button_android"
            style="@style/ToggleButtonWithIconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="251dp"
            android:text="@string/user_filter_android"/>

        <Button
            android:id="@+id/button_iOs"
            style="@style/ToggleButtonWithIconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="340dp"
            android:text="@string/user_filter_iOS"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>