<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_Xlarge"
    android:paddingTop="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="@dimen/large_square_icon"
            android:layout_height="@dimen/large_square_icon"
            android:contentDescription="@string/login_icon"
            android:src="@drawable/etnetera"
            app:layout_constraintBottom_toTopOf="@id/loginInfoLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/academyTitle"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_academy_2021"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/loginIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
            android:id="@+id/loginInfoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUserName"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_homeworks"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/spacing_small"
                android:textColor="@android:color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputUserName"
                android:background="@drawable/border_homeworks"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/spacing_small"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/loginButton"
                style="@style/LoginButton"
                android:layout_width="@dimen/large_square_icon"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/border_homeworks"
                android:text="@string/login_button" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>