<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- main layout for scroll view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_small">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/skills_headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="@dimen/spacing_small"
                android:paddingVertical="@dimen/spacing_small"
                android:text="You can edit your skills here." />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:paddingHorizontal="@dimen/spacing_medium">

                <!-- Android -->

                <TextView
                    android:id="@+id/android_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/spacing_small"
                    android:text="@string/android_skill"
                    app:drawableStartCompat="@drawable/ic_android" />

                <include
                    android:id="@+id/progress_bar_android"
                    layout="@layout/bubble_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/android_title"
                    android:layout_marginBottom="@dimen/spacing_small"/>

                <!--Kotlin -->

                <TextView
                    android:id="@+id/kotlin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progress_bar_android"
                    android:drawablePadding="@dimen/spacing_small"
                    android:text="@string/kotlin_skill"
                    app:drawableStartCompat="@drawable/ic_kotlin" />

                <include
                    android:id="@+id/progress_bar_kotlin"
                    layout="@layout/bubble_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/kotlin_title"
                    android:layout_marginBottom="@dimen/spacing_small"/>

                <!-- IOS -->

                <TextView
                    android:id="@+id/ios_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progress_bar_kotlin"
                    android:drawablePadding="@dimen/spacing_small"
                    android:text="@string/ios_skill"
                    app:drawableStartCompat="@drawable/ic_apple" />

                <include
                    android:id="@+id/progress_bar_ios"
                    layout="@layout/bubble_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ios_title"
                    android:layout_marginBottom="@dimen/spacing_small"/>

                <!-- Swift -->

                <TextView
                    android:id="@+id/swift_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progress_bar_ios"
                    android:drawablePadding="@dimen/spacing_small"
                    android:text="@string/swift_skill"
                    app:drawableStartCompat="@drawable/ic_swift" />

                <include
                    android:id="@+id/progress_bar_swift"
                    layout="@layout/bubble_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/swift_title"
                    android:layout_marginBottom="@dimen/spacing_small"/>


            </RelativeLayout>

            <android.widget.Button
                android:id="@+id/submitEdit"
                android:layout_width="@dimen/large_square_icon"
                android:layout_height="@dimen/square_icon_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/button"
                android:elevation="@dimen/spacing_small"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>